create the changing image effect onclick with js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div id="background"></div>
   <header>
     <div class="left-header">
       <a href="#" class="logo"><img src="images/logo.svg" alt="logo"></a>
@@ -55,10 +56,10 @@
         <img id="carouselImage" src="images/image-product-1.jpg" alt="carousel-image">
       </div>
       <div class="carousel-items">
-        <a href="javascript:void;"><figure class="active"><img src="images/image-product-1-thumbnail.jpg" class="carouselItem active" alt="product1"></figure></a>
-        <a href="javascript:void;"><figure><img src="images/image-product-2-thumbnail.jpg" height="100" class="carouselItem" alt="product2"></figure></a>
-        <a href="javascript:void;"><figure><img src="images/image-product-3-thumbnail.jpg" height="100" class="carouselItem" alt="product3"></figure></a>
-        <a href="javascript:void;"><figure><img src="images/image-product-4-thumbnail.jpg" height="100" class="carouselItem" alt="product4"></figure></a>
+        <a href="javascript:void;"><figure class="active"><img src="images/image-product-1.jpg" class="active carouselItem" alt="product1"></figure></a>
+        <a href="javascript:void;"><figure><img src="images/image-product-2.jpg" height="100" class="carouselItem" alt="product2"></figure></a>
+        <a href="javascript:void;"><figure><img src="images/image-product-3.jpg" height="100" class="carouselItem" alt="product3"></figure></a>
+        <a href="javascript:void;"><figure><img src="images/image-product-4.jpg" height="100" class="carouselItem" alt="product4"></figure></a>
       </div>
     </div>
     <!-- RIGHT HERO SECTION -->
