--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <span id="close-btn"><img src="./images/icon-previous.svg" alt="previous button"></span>
     <div class="left background-container">
       <div class="carousel-container">
-        <img id="carouselImage" src="images/image-product-1.jpg" alt="carousel-image">
+        <img src="images/image-product-1.jpg" alt="carousel-image">
       </div>
       <div class="carousel-items">
         <a href="javascript:void"><figure class="active"><img src="images/image-product-1.jpg" class="active carouselItem" alt="product1"></figure></a>
@@ -42,7 +42,7 @@
       </nav>
     </div>
       <ul class="profil">
-        <li class="cart"><span class="cart-item-number cartItemNumber">0</span><a href="javascript:void;"><img src="images/icon-cart.svg" alt="cart"></a>  
+        <li class="cart"><span class="cart-item-number cartItemNumber">0</span><a href="#"><svg class="cart-icon" width="22" height="20" xmlns="http://www.w3.org/2000/svg"><path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#69707D" fill-rule="nonzero"/></svg></a>  
         </li>
         <div class="cart-container">
           <div class="cart-header">
@@ -73,10 +73,10 @@
         <img id="carouselImage" src="images/image-product-1.jpg" alt="carousel-image">
       </div>
       <div class="carousel-items">
-        <a href="javascript:void;"><figure class="active"><img src="images/image-product-1.jpg" class="active carouselItem" alt="product1"></figure></a>
-        <a href="javascript:void;"><figure><img src="images/image-product-2.jpg" height="100" class="carouselItem" alt="product2"></figure></a>
-        <a href="javascript:void;"><figure><img src="images/image-product-3.jpg" height="100" class="carouselItem" alt="product3"></figure></a>
-        <a href="javascript:void;"><figure><img src="images/image-product-4.jpg" height="100" class="carouselItem" alt="product4"></figure></a>
+        <figure class="active"><img src="images/image-product-1.jpg" class="active carouselItem" alt="product1"></figure>
+        <figure><img src="images/image-product-2.jpg" class="carouselItem" alt="product2"></figure>
+        <figure><img src="images/image-product-3.jpg" class="carouselItem" alt="product3"></figure>
+        <figure><img src="images/image-product-4.jpg" class="carouselItem" alt="product4"></figure>
       </div>
     </div>
     <!-- RIGHT HERO SECTION -->
